GNOME Bugzilla – Bug 659053
Shouldn't save password until we actually connect
Last modified: 2011-09-14 15:00:25 UTC
We should wait that the account is connected before saving the password to the keyring. This is specially annoying with GOA accounts as user doesn't have any way to ask to forget the password if he entered a wrong one.
Created attachment 196502 [details] [review] sasl-handler: only save password if we manage to connect
Attachment 196502 [details] pushed as 6ac4e08 - sasl-handler: only save password if we manage to connect