sasl-handler: only save password if we manage to connect

https://bugzilla.gnome.org/show_bug.cgi?id=659053